# automl

./: .gitignore  ARCHIVE.md  CLAUDE.md  README.md  RESUME.md  SESSION_JOURNAL_2.md  install.sh  pyproject.toml  readme.md  requirements.txt  ruff.toml  run_automl.py  setup.py
automl_package/: __init__.py  automl.py  enums.py  logger.py  preprocessing.py
docs/: architecture_analysis.md  benchmarks.md  implementation_plan.md  mathematical_guide.tex  phase2_handover.md  probreg_identifiability_implementation_plan.md  probreg_identifiability_research.md  probreg_kselection_findings.md  research_plan.md  work_order.md
presentation/: generate_plots.py  generate_plots_ab.py  index.html  slides.html
tests/: conftest.py  test_anchored_head.py  test_boundary_constraints.py  test_capacity_accounting.py  test_capacity_ladder_toys.py  test_capacity_ladder_v0.py  test_capacity_selection.py  test_ce_stop_grad.py  test_depth_composition_toy.py  test_distilled_router.py  test_distributions_mog_components.py  test_evidence_variance.py  test_fixed_sigma_scorer.py  test_flexible_width_network.py  test_fused_heads_equivalence.py  test_get_device_override.py  test_matryoshka_equivalence.py  test_mdn_nll.py  test_monotonic_head_init.py  test_nested_depth_strategy.py  test_nested_width_single_trunk.py  test_ordering_constraint.py  test_phase1_probabilistic_regression.py  test_phase2_flexible_nn.py  test_phase3_dynamic_k.py  test_phase4_regression.py  test_photoz_domain_metrics.py  test_predict_shape.py  test_prefix_norm_equivalence.py  test_probreg_identifiability_integration.py  (+7 more)
(+4601 files in other folders)
